--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: linear-gradient(rgb(69, 69, 250), white);
@@ -17,49 +17,27 @@ header {
   flex-direction: row;
   justify-content: space-between;
 }
-.logo {
-  float: left;
-  /*margin-left: 9em;*/
-}
-header::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-nav ul {
-  margin: 0;
-  padding-right: 5em;
-  list-style: none;
-  float: right;
-}
-nav li {
-  display: inline-block;
-  margin-left: 40px;
-  padding-top: 50px;
-
-  position: relative;
-}
-nav a {
-  color: navy;
-  text-decoration: none;
-  font-size: 2em;
-}
-
-nav a:hover {
-  color: white;
-  transition: 250ms;
-}
-nav a::before {
-  height: 1em;
-  width: 100%;
-  background-color: rgb(255, 255, 255);
-}
-nav a:hover::before {
-  width: 100%;
-}
-
 .loginbox {
   text-align: center;
+  background-color: white;
+  width: 75%;
+  margin-right: auto;
+  margin-left: auto;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  border-radius: 6px;
+}
+
+.loginbox h1 {
+  padding-top: 30px;
+  color: rgb(6, 67, 73);
+}
+
+.loginbox p {
+  color: rgb(41, 186, 199);
+}
+
+.heading {
+  line-height: 1;
 }
 
 .loginbox form {
@@ -67,6 +45,116 @@ nav a:hover::before {
   flex-direction: column;
 }
 
+.loginbox input {
+  width: 40%;
+  height: 40px;
+  border: 1px solid #d7d7d7;
+  border-radius: 6px;
+  outline: none;
+  margin: 1px;
+  text-align: center;
+  margin: 0 5px;
+  background: #eeeeee;
+  font-size: 20px;
+}
+
+.loginbox button {
+  width: 40%;
+  height: 40px;
+  border: 1px solid #d7d7d7;
+  border-radius: 6px;
+  outline: none;
+  margin: 1px;
+  text-align: center;
+  margin: 0 5px;
+  background: rgb(41, 186, 199);
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.loginbox label {
+  font-size: 1.5rem;
+}
+
+.loginbox select {
+  width: 30%;
+  height: 40px;
+  border: 1px solid #d7d7d7;
+  border-radius: 6px;
+  outline: none;
+  margin: 1px;
+  text-align: center;
+  margin: 0 5px;
+  background: #eeeeee;
+  font-size: 20px;
+}
+
+.loginbox option {
+  border-radius: 6px;
+}
+
 .row {
   margin: 10px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: transparent;
+}
+
+.topnav a {
+  float: right;
+  display: block;
+  color: navy;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 2em;
+  margin-top: 1.5rem;
+}
+
+.topnav a:hover {
+  color: white;
+}
+.topnav .icon {
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+    margin-top: 0;
+  }
+  .loginbox input {
+    width: 90%;
+  }
+
+  .loginbox button {
+    width: 90%;
+  }
+
+  .loginbox button a:hover {
+    color: white;
+  }
+
+  .loginbox select {
+    width: 90%;
+  }
 }
