--- a/style.css
+++ b/style.css
@@ -125,8 +125,10 @@ header {
 
 .calender-container {
   font-size: 1.5rem;
-  width: 475px;
+  width: 30%;
   height: 578px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .calender {
@@ -212,11 +214,13 @@ span {
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
   border-radius: 6px;
   padding: 1em;
-  width: 475px;
+  width: 100%;
   height: 578px;
   font-size: 1.5em;
+  /*transform: rotateY(180deg);*/
+  display: none;
 }
-#noearlier{
+#noearlier {
   width: 30%;
   height: 40px;
   border: 1px solid #d7d7d7;
@@ -251,42 +255,42 @@ span {
 }
 
 .save {
-background-color: rgb(69, 69, 250, 0.2);
-font-size: 1.5em;
-width: 30%;
-height: 40px;
-border: 1px solid #d7d7d7;
-border-radius: 6px;
-outline: none;
-margin: 1px;
-justify-content: center;
-margin: 0 5px;
-font-size: 20px;
-margin-bottom: 1em;
+  background-color: rgb(69, 69, 250, 0.2);
+  font-size: 1.5em;
+  width: 30%;
+  height: 40px;
+  border: 1px solid #d7d7d7;
+  border-radius: 6px;
+  outline: none;
+  margin: 1px;
+  justify-content: center;
+  margin: 0 5px;
+  font-size: 20px;
+  margin-bottom: 1em;
 }
 
 .dismiss {
-background-color: rgb(69, 69, 250, 0.2);
-font-size: 1.5em;
-width: 30%;
-height: 40px;
-border: 1px solid #d7d7d7;
-border-radius: 6px;
-outline: none;
-margin: 1px;
-justify-content: center;
-margin: 0 5px;
-font-size: 20px;
-margin-bottom: 1em;
+  background-color: rgb(69, 69, 250, 0.2);
+  font-size: 1.5em;
+  width: 30%;
+  height: 40px;
+  border: 1px solid #d7d7d7;
+  border-radius: 6px;
+  outline: none;
+  margin: 1px;
+  justify-content: center;
+  margin: 0 5px;
+  font-size: 20px;
+  margin-bottom: 1em;
 }
 
 #noearlierhead {
-  font-size: .8em;
+  font-size: 0.8em;
   margin-top: 3em;
 }
 
 #nolaterhead {
-  font-size: .8em;
+  font-size: 0.8em;
   margin-top: 2em;
 }
 
@@ -294,4 +298,58 @@ margin-bottom: 1em;
   width: 100%;
   text-align: center;
   margin-top: 1em;
+}
+
+/*.front {
+  transform: rotateY(0deg);
+}*/
+
+.flip {
+  transform: rotateY(180deg);
+}
+
+.days {
+  background-color: transparent;
+  border: none;
+  font-size: 1em;
+  margin: 0.6em;
+}
+
+@media only screen and (max-width: 1024px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+    margin-top: 0;
+  }
+  .loginbox input {
+    width: 90%;
+  }
+
+  .loginbox button {
+    width: 90%;
+  }
+
+  .loginbox button a:hover {
+    color: white;
+  }
+
+  .loginbox select {
+    width: 90%;
+  }
 }
