--- a/styleMODAL.css
+++ b/styleMODAL.css
@@ -1,14 +1,15 @@
 body {
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: linear-gradient(rgb(69, 69, 250), white);
+    background-image: linear-gradient(rgb(69, 69, 250), white);*/
+    background-color: #ffffff;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
       "Lucida Sans", Arial, sans-serif;
   }
   header {
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
       "Lucida Sans", Arial, sans-serif;
-    color: navy;
+    color: rgb(0, 0, 46);
   }
   .container {
     width: 100%;
@@ -33,12 +34,25 @@ body {
   .nav-list {
     flex-grow: 1;
     flex-basis: 0;
-    padding: 30px;
     list-style: none;
     float: right;
     text-align: center;
+    color: white;
   }
-  
+  .nav-button {
+    background-color: rgb(69, 69, 250, 0.1) ;
+    border: none;
+    height: 4em;
+    float: right;
+    margin-left: 1em ;
+    display: inline;
+    padding-left: 1em;
+  }
+  .nav-button:hover {
+    transition: ease-in-out;
+    transition-duration: 120ms;
+    color: rgb(69, 69, 250);
+  }
   .nav-list a {
     margin-right: 15px;
   }
@@ -55,24 +69,18 @@ body {
     color: navy;
     text-decoration: none;
     font-size: 2em;
+    display: inline-block;
   }
   
   nav a:hover {
-    color: white;
-    transition: 250ms;
-  }
-  nav a::before {
-    height: 1em;
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-  }
-  nav a:hover::before {
-    width: 100%;
-  }
-  
+      transition: ease-in-out;
+      transition-duration: 120ms;
+      background-color: rgb(69, 69, 250); ;
+    }
+
   .loginbox {
     text-align: center;
-    background-color: white;
+    background-color: rgb(69, 69, 250, 0.7);
     width: 75%;
     margin-right: auto;
     margin-left: auto;
@@ -82,11 +90,11 @@ body {
   
   .loginbox h1 {
     padding-top: 30px;
-    color: rgb(6, 67, 73);
+    color: rgb(1, 0, 49);
   }
   
   .loginbox p {
-    color: rgb(41, 186, 199);
+    color: rgb(255, 255, 255);
   }
   
   .heading {
@@ -101,13 +109,13 @@ body {
   .loginbox input {
     width: 40%;
     height: 40px;
-    border: 1px solid #d7d7d7;
+    border: 1px solid #ffffff;
     border-radius: 6px;
     outline: none;
     margin: 1px;
     text-align: center;
     margin: 0 5px;
-    background: #eeeeee;
+    background: #ffffff;
     font-size: 20px;
   }
   
@@ -124,7 +132,7 @@ body {
     margin: 1px;
     text-align: center;
     margin: 0 5px;
-    background: #eeeeee;
+    background: #ffffff;
     font-size: 20px;
   }
   
@@ -153,7 +161,7 @@ body {
       color: black;
       background: transparent;
       font-style: normal;
-      font-size: 2em;
+      font-size: 1em;
       padding: 10px;
     }
   
@@ -187,8 +195,29 @@ input[type=button] {
     margin: 1px;
     text-align: center;
     margin: 0 5px;
-    background: rgb(41, 186, 199);
+    background: navy;
     font-size: 20px;
     margin-bottom: 20px;
-    border:none
+    border:none;
+    color: white;
   }
+  input[type=button]:hover{
+    background-color: rgb(255, 255, 255);
+    color: navy;
+    transition-duration: 250ms;
+  }
+
+.topnav {
+  background-color:rgb(69, 69, 250, 0.7);
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 4em;
+  height: 3.5em;
+}
+
+.topnav a {
+  float: right;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  text-decoration: none;
+}
