--- a/style.css
+++ b/style.css
@@ -2,14 +2,43 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: linear-gradient(rgb(69, 69, 250), white);
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 header {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   color: navy;
+}
+
+#paoloCirc {
+  float: left;
+  border-radius: 50%;
+  height: 5px;
+  width: 5px;
+  background-color: #ff0000;
+}
+#ashleyCirc {
+  float: left;
+  border-radius: 50%;
+  height: 5px;
+  width: 5px;
+  background-color: purple;
+}
+#hudaCirc {
+  float: left;
+  border-radius: 50%;
+  height: 5px;
+  width: 5px;
+  background-color: blue;
+}
+#amberdeenCirc {
+  float: left;
+  border-radius: 50%;
+  height: 5px;
+  width: 5px;
+  background-color: green;
 }
 .container {
   width: 100%;
