--- a/style.css
+++ b/style.css
@@ -382,12 +382,14 @@ span {
 
 .big-months select {
   width: 35%;
-  margin-left: 8em;
+  margin-left: 6em;
+  justify-content: space-evenly;
+  margin-bottom: 2em ;
   padding: 1em;
   font-size: 1em;
   font-weight: bold;
   border: none;
-  background-color: lightgray;
+  background-color: rgb(241, 241, 241);
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
 
@@ -428,8 +430,9 @@ table {
 
 .user-key-container {
   margin-bottom: 3em;
-  background-color: lightgray;
+  background-color: rgb(236, 236, 236);
   width: 80%;
+  padding: 1em;
   border-radius: 10px;
   margin-right: auto;
   margin-left: auto;
@@ -454,6 +457,7 @@ table {
 #event-name {
   font-size: 3em;
   text-align: center;
+  
 }
 
 #big-back {
@@ -480,6 +484,9 @@ table {
   position: absolute;
   top: 8%;
   right: 2%;
+  background-color: #eeeeee;
+  width: auto;
+  padding: .2em;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
